# AyushBot

./: .env.example  .gitignore  Makefile  PROJECT_COMPREHENSIVE_ANALYSIS.md  README.md  pyproject.toml  pytest.ini
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: README.md  build.gradle.kts  proguard-rules.pro
android/docs/: ayushbot-branding-guide-legendary.md  ayushbot-branding-guide.md  ayushbot-design-specs-legendary.md  ayushbot-design-specs.md
android/gradle/: README.md  libs.versions.toml
backend/: Dockerfile  README.md  TESTING.md  __init__.py  config.example.yaml  config.local-gateway.example.yaml  config.py  config.yaml  requirements.txt
backend/agents/: README.md  __init__.py  agent_diagnosis.py  agent_fl_sync.py  agent_intake.py  agent_language.py  agent_referral.py  orchestrator.py  pretriage_reference.py  smoke_test.py  state.py
backend/agents/schemas/: __init__.py  action_plan.py  differential.py  patient_assessment.py
backend/api/: ANDROID_SYNC_CONTRACTS.md  ESP32_TELEMETRY_CONTRACT.md  README.md  __init__.py  main.py
backend/api/middleware/: __init__.py  rate_limiter.py
backend/api/routes/: __init__.py  auth.py  health.py  sync.py  telemetry.py  triage.py
backend/db/: README.md  __init__.py  alembic.ini  crud.py  migrate.py  models.py  seed.py  session.py
backend/db/migrations/: .gitkeep  README.md  env.py  script.py.mako
backend/demo/: run_showcase.py
backend/fl/: README.md  __init__.py  aggregator.py  dp_mechanism.py  fl_client.py  gossip.py  local_trainer.py  privacy.py  smoke_test.py  sync_client.py
backend/llm/: README.md  __init__.py  engine.py  inference.py  loader.py  smoke_test.py
backend/llm/prompts/: diagnosis_prompt.j2  referral_prompt.j2  system_prompt.txt
backend/rag/: README.md  __init__.py  build_index.py  retriever.py  smoke_test.py
backend/rag/index/: .gitkeep
backend/rag/pipeline/: __init__.py  chunker.py  embedder.py  indexer.py  reranker.py  retriever.py
backend/security/: README.md  __init__.py  auth.py  bootstrap.py  transport.py
backend/security/mqtt_broker_config/: .gitkeep
backend/tests/: test_api_surface.py  test_auth_hardening.py  test_clinical_reference_policy.py  test_config_behavior.py  test_db_layer.py  test_esp32_telemetry.py  test_fl_safety.py  test_language_agent.py  test_optional_import_stability.py  test_orchestrator_state.py  test_rag_artifacts.py
cloud/: .env.dev  .env.example  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_TRACKING.md  README.md  __init__.py  config.yaml  docker-compose.prod.yml  docker-compose.yml  generate_certs.py  pyproject.toml  requirements.txt  smoke_test.py
cloud/analytics/: README.md  __init__.py  aggregator.py
cloud/analytics/dashboard/: __init__.py  app.py
cloud/analytics/dashboard/charts/: .gitkeep
cloud/analytics/ingestion/: __init__.py
cloud/api/: README.md  __init__.py  auth.py  exceptions.py  main.py
cloud/api/auth/: __init__.py  cert_manager.py  provider.py
cloud/api/middleware/: rate_limit.py
cloud/api/routes/: fl_status.py  health.py  model.py
cloud/auth/: __init__.py
cloud/certs/: ca.crt  ca.key  gateway-001.crt  gateway-001.key  placeholder.txt  server.crt  server.key  test-client.crt  test-client.key
cloud/config/: __init__.py  loader.py
cloud/dashboards/: __init__.py  db_helpers.py  main.py
cloud/dashboards/pages/: aggregation_history.py  hardware_monitoring.py  model_drift_analysis.py  outbreak_detection.py
cloud/fl_server/: README.md  __init__.py  model_registry.py  privacy.py  server.py  strategy.py
cloud/fl_server/callbacks/: __init__.py  post_aggregation.py
cloud/infra/: __init__.py
data/: README.md
data/corpus/: README.md
data/reference/: PRETRIAGE_MEDICAL_REVIEW.md  README.md  facilities.example.csv  pretriage_rules.example.json  pretriage_rules.json  villages.example.json  who_weight_for_age_lms.example.json  who_weight_for_age_lms.json
data/synthetic/: README.md
docs/: README.md  agentic-architecture.md  android-design-doc.md  android-ui-guide.md  ayushbot_el_report.tex  core-subjects-expansion.md  dataset-analysis.md  dataset-deep-dive.md  directory-structure.md  fl-synchronisation.md  ml-design.md  prd.md  project-deep-dissection.md
firmware/: README.md
firmware/edge_impulse/: README.md  model_card.md
firmware/sensor_pack/: README.md  platformio.ini
gateway/phc_dashboard/: README.md  __init__.py  app.py
infra/: README.md  docker-compose.prod.yml  docker-compose.yml  rpi_setup.sh
infra/certs/: README.md  generate_certs.sh
infra/monitoring/: README.md  grafana_dashboard.json  prometheus.yml
infra/mosquitto/: README.md  acl.conf  mosquitto.conf
ml/: README.md
ml/charts/: tinyml_metrics.csv  xgboost_metrics.csv
ml/fl_simulation/: README.md  run_byzantine.py  run_fedavg.py  run_fedprox.py  run_gossip.py  run_scaffold.py  simulate_nodes.py
ml/language/: README.md  eval_indic.py  train_intent.py  train_ner.py
ml/notebooks/: .gitkeep  README.md
ml/signal_quality/: README.md  eval_hr_accuracy.py  train_motion_filter.py
ml/src/: gen_tinyml_dataset.py  gen_xgboost_dataset.py  requirements.txt  train_tinyml.py  train_tinyml_new.py  train_xgboost.py  train_xgboost_new.py
ml/triage_classifier/: 01_extract_mimiciv.py  02_merge_nfhs5.py  03_feature_engineering.py  04_train_xgboost.py  05_evaluate.py  06_export_onnx.py  README.md  model_card.md  model_metadata.example.json
research/: README.md  ayushbot_paper.tex  ayushbot_paper_2.aux  ayushbot_paper_2.tex
tests/: README.md  __init__.py  conftest.py
tests/integration/: README.md  __init__.py  conftest.py  test_api.py  test_auth_errors.py  test_ble_mqtt_stack.py  test_dashboards.py  test_db_migrations.py  test_fl_round.py  test_fl_server.py  test_full_pipeline.py  test_phase3_contracts.py  test_tls.py
tests/simulation/: README.md  __init__.py  run_asha_scenario.py
tests/unit/: README.md  __init__.py  test_agent_diagnosis.py  test_agent_intake.py  test_agent_referral.py  test_auth_security.py  test_config.py  test_db_crud.py  test_dp_mechanism.py  test_fl_aggregator.py  test_rag_pipeline.py
(+133 files in other folders)
