[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ayushbot"
version = "0.1.0"
description = "Offline-first backend foundation for the AyushBot PHC gateway"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "AyushBot Team" }]
dependencies = [
    "alembic>=1.13,<2",
    "argon2-cffi>=23.1,<26",
    "fastapi>=0.110,<1",
    "numpy>=1.26,<3",
    "paho-mqtt>=2.1,<3",
    "pydantic>=2.6,<3",
    "PyJWT[crypto]>=2.8,<3",
    "PyYAML>=6,<7",
    "redis>=5,<7",
    "SQLAlchemy>=2.0,<3",
    "uvicorn[standard]>=0.29,<1",
]

[project.optional-dependencies]
ai = [
    "faiss-cpu>=1.8,<2",
    "flwr>=1.9,<2",
    "langgraph>=0.2,<1",
    "llama-cpp-python>=0.2.80,<1",
    "onnxruntime>=1.17,<2",
    "rank-bm25>=0.2.2,<1",
    "tokenizers>=0.19,<1",
    "xgboost>=2.0,<4",
]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-q"
markers = [
    "slow: tests that take more than five seconds",
    "integration: tests requiring multiple components",
    "hardware: tests requiring physical hardware",
    "simulation: full ASHA scenario simulations",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["android", "cloud", "firmware", "ml", "research"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

[tool.ruff.format]
indent-style = "tab"
